--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.8.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
