--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
+    "react-snowfall": "^2.4.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
